# ms-teams-image-simulator

./: README.md  main.py  pyproject.toml
